Filter, search Button fixed